# yaya-word

./: README.md  index.html  package.json  pnpm-lock.yaml  开发手记.md
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: m20220101_000001_create_table.rs
src-tauri/src/: algorithm.rs  commands.rs  db.rs  error.rs  lib.rs  main.rs  models.rs
src-tauri/src/entities/: master_word.rs  mod.rs  prelude.rs  source_enum.rs  user_word.rs
src-tauri/src/services/: master_word_service.rs  mod.rs  stats_service.rs  user_word_service.rs
src/api/: index.ts
src/hooks/: useTTS.ts
src/layouts/: MainLayout.tsx
src/pages/: HomePage.tsx  ReviewPage.tsx  SettingsPage.tsx  WordListPage.tsx
src/stores/: wordStore.ts
src/types/: index.ts
src/utils/: notification.ts  store.ts
