[package]
name = "yaya-word"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yaya_word_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
migration = { path = "./migration" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.41", features = ["serde"] }
sea-orm = {version =  "1.1.14", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-tts = { git = "https://github.com/httpjamesm/tauri-plugin-tts.git" }
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
